# ghostwriter

./: README.md  ghostwriter  go.mod  install.sh  pyproject.toml
cmd/ghostwriter/: main.go
